# writeups

./: .gitignore  CNAME  README.md  build.py  pyproject.toml
.github/workflows/: publish.yml
CyberPanel Babuk Variant/: README.md  cyberpanel_babuk_variant.yara  decompiled.c  dont.run.me
CyberPanel Babuk Variant/decrypt/: README.md  build.sh
CyberPanel-Babuk-Variant/: README.md  dont.run.me.pat  dont.run.me.sig
CyberPanel-Babuk-Variant/decrypt/: build.bat  sosemanuk.h
CyberPanel-Babuk-Variant/decrypt/prebuilt/: decrypt
MTI Player/: README.md  read_proxyman_session.py
MTI-Player/: poc_production.py  poc_rehearsal.py
QLab/: README.md
Tools/: check_github_token.py  requirements.txt
src/: _common.html  _page.html  _post.html  _tag.html  index.html  posts.html
src/posts/: cp-babuk.md  mti-player.md  patching-qlab.md  pythonkind.md
src/static/css/: codehilite.css  style.css  theme.css
src/static/posts/CyberPanel-Babuk-Variant/: cyberpanel_babuk_variant.yara  test.json.encryp
src/static/posts/CyberPanel-Babuk-Variant/decrypt/: decrypt.cpp
src/static/posts/MTI-Player/: README.md  poc_production.py  poc_rehearsal.py
src/static/posts/QLab/: README.md
